refactoring/536_resolve-sonar-findings-of-june-2026 (#537)
#536: Resolve Sonar findings of June 2026.